--- a/example/gall.css
+++ b/example/gall.css
@@ -1,6 +1,6 @@
 ::-webkit-scrollbar{width:10px;height:9px;}
 ::-webkit-scrollbar-track{-webkit-box-shadow: 5px 5px 5px -5px rgba(34, 60, 80, 0.2) inset;background-color:#e5e5e5;border-radius:6px;}
-::-webkit-scrollbar-thumb{border-radius:6px;background:linear-gradient(180deg, #787878, #1a1a1a);}
+::-webkit-scrollbar-thumb{border-radius:6px;background:linear-gradient(180deg, #504f4f, #2b2a2a);}
 
 #gall_gam{margin-top:30px;display:flex;flex-wrap:wrap;}
 #g_form{display:none;position:fixed;width:100%;height:100%;background-color:rgb(0 0 0 / 39%);z-index:45;}
@@ -8,6 +8,9 @@
 #bi_img{width:100%;border-radius:6px;}
 #gb_cont{display:flex;margin:0 auto;overflow:auto hidden;padding:0px 0px 3px;height:80px;}
 #ug_gg{display:flex;position:relative;}
+#img_sch{height:35px;width:55px;background-color:#000;border-radius:6px 0px;position:absolute;}
+#tm_chisl{color:#fff;font-weight:600;padding:6px 12px;}
+#gl_clos{background:url('sys/close.svg');background-size:contain;position:absolute;top:12px;right:20px;width:20px;height:20px;border:none;overflow:hidden;}
 .gal_pic{height:130px;margin:3px;}
 .gal_pic img{height:100%;border-radius:6px;}
 .nnact{display:none;}
@@ -21,9 +24,4 @@
 ._rifs{margin:200px 0px;right:30px;}
 ._dey{width:45px;background-color: rgb(72 72 72 / 11%);height:70px;border-radius:3px;cursor:pointer;}
 ._dey:hover{background-color: rgb(72 72 72 / 39%);}
-    
-    
-	
-	
-    
     
